--- a/api/qsharp/microsoft.quantum.math.abssquaredcomplexpolar.yml
+++ b/api/qsharp/microsoft.quantum.math.abssquaredcomplexpolar.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.math.abssquaredcomplexpolar
 name: AbsSquaredComplexPolar
 type: function
 namespace: Microsoft.Quantum.Math
-summary: 返回 `ComplexPolar`类型的复数的平方绝对值。
+summary: 返回类型`ComplexPolar`的复数的平方绝对值。
 syntax: 'function AbsSquaredComplexPolar (input : Microsoft.Quantum.Math.ComplexPolar) : Double'
 input:
   content: '(input : Microsoft.Quantum.Math.ComplexPolar)'
@@ -18,9 +18,9 @@ output:
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 47fbbcab9707c19d9d6cb064c69a0bc6d2c00011
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 0118f138e19f314c301af6f4649442f36459409a
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73222045"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82674012"
