--- a/api/qsharp/Microsoft.Quantum.Arrays.yml
+++ b/api/qsharp/Microsoft.Quantum.Arrays.yml
@@ -20,7 +20,7 @@ functions:
 - uid: microsoft.quantum.arrays.filtered
   summary: 给定为数组元素定义的数组和谓词后，将返回一个数组，其中包含满足谓词的元素。
 - uid: microsoft.quantum.arrays.fold
-  summary: 通过数组 `array`循环访问函数 `f`，并返回 `f(f(f(initialState, array[0]), array[1]), ...)`。
+  summary: 通过数组`f` `array`循环访问函数，返回`f(f(f(initialState, array[0]), array[1]), ...)`。
 - uid: microsoft.quantum.arrays.head
   summary: 返回数组的第一个元素。
 - uid: microsoft.quantum.arrays.indexof
@@ -69,9 +69,9 @@ operations:
 - uid: microsoft.quantum.arrays.foreach
   summary: 给定为数组元素定义的数组和操作，返回一个新数组，该数组由该操作下的原始数组的图像组成。
 metadata:
-  ms.openlocfilehash: 422564f632efd7a6d093d78358a15ee012f918f8
-  ms.sourcegitcommit: a0e50c5f07841b99204c068cf5b5ec8ed087ffea
+  ms.openlocfilehash: a9088a037953f62ab7193ea525a6e71d43fe2fb2
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/26/2020
-  ms.locfileid: "80320735"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82673388"
