--- a/api/qsharp/Microsoft.Quantum.Extensions.Bitwise.yml
+++ b/api/qsharp/Microsoft.Quantum.Extensions.Bitwise.yml
@@ -3,23 +3,23 @@ uid: microsoft.quantum.extensions.bitwise
 name: Microsoft.Quantum.Extensions.Bitwise
 functions:
 - uid: microsoft.quantum.extensions.bitwise.and
-  summary: "\n> [!WARNING]\n> 已放弃\n\n和已弃用。 请改用 @\"microsoft.quantum.bitwise.and\"。\n请使用 @\"microsoft.quantum.bitwise.and\"。"
+  summary: "\n> [!WARNING]\n> 不推荐使用\n\n和已弃用。 请改用 @\"microsoft.quantum.bitwise.and\"。\n请使用 @\"microsoft.quantum.bitwise.and\"。"
 - uid: microsoft.quantum.extensions.bitwise.not
-  summary: "\n> [!WARNING]\n> 已放弃\n\n尚未弃用。 请改用 @\"microsoft.quantum.bitwise.not\"。\n请使用 @\"microsoft.quantum.bitwise.not\"。"
+  summary: "\n> [!WARNING]\n> 不推荐使用\n\n尚未弃用。 请改用 @\"microsoft.quantum.bitwise.not\"。\n请使用 @\"microsoft.quantum.bitwise.not\"。"
 - uid: microsoft.quantum.extensions.bitwise.or
-  summary: "\n> [!WARNING]\n> 已放弃\n\n或已弃用。 请改用 @\"microsoft.quantum.bitwise.or\"。\n请使用 @\"microsoft.quantum.bitwise.or\"。"
+  summary: "\n> [!WARNING]\n> 不推荐使用\n\n或已弃用。 请改用 @\"microsoft.quantum.bitwise.or\"。\n请使用 @\"microsoft.quantum.bitwise.or\"。"
 - uid: microsoft.quantum.extensions.bitwise.parity
-  summary: "\n> [!WARNING]\n> 已放弃\n\n奇偶校验已弃用。 请改用 @\"microsoft.quantum.bitwise.parity\"。\n请使用 @\"microsoft.quantum.bitwise.parity\"。"
+  summary: "\n> [!WARNING]\n> 不推荐使用\n\n奇偶校验已弃用。 请改用 @\"microsoft.quantum.bitwise.parity\"。\n请使用 @\"microsoft.quantum.bitwise.parity\"。"
 - uid: microsoft.quantum.extensions.bitwise.xbits
-  summary: "\n> [!WARNING]\n> 已放弃\n\nXBits 已被弃用。 请改用 @\"microsoft.quantum.bitwise.xbits\"。\n请使用 @\"microsoft.quantum.bitwise.xbits\"。"
+  summary: "\n> [!WARNING]\n> 不推荐使用\n\nXBits 已被弃用。 请改用 @\"microsoft.quantum.bitwise.xbits\"。\n请使用 @\"microsoft.quantum.bitwise.xbits\"。"
 - uid: microsoft.quantum.extensions.bitwise.xor
-  summary: "\n> [!WARNING]\n> 已放弃\n\n不推荐使用 Xor。 请改用 @\"microsoft.quantum.bitwise.xor\"。\n请使用 @\"microsoft.quantum.bitwise.xor\"。"
+  summary: "\n> [!WARNING]\n> 不推荐使用\n\n不推荐使用 Xor。 请改用 @\"microsoft.quantum.bitwise.xor\"。\n请使用 @\"microsoft.quantum.bitwise.xor\"。"
 - uid: microsoft.quantum.extensions.bitwise.zbits
-  summary: "\n> [!WARNING]\n> 已放弃\n\nZBits 已被弃用。 请改用 @\"microsoft.quantum.bitwise.zbits\"。\n请使用 @\"microsoft.quantum.bitwise.zbits\"。"
+  summary: "\n> [!WARNING]\n> 不推荐使用\n\nZBits 已被弃用。 请改用 @\"microsoft.quantum.bitwise.zbits\"。\n请使用 @\"microsoft.quantum.bitwise.zbits\"。"
 metadata:
-  ms.openlocfilehash: 69399e7aa3c7173b1173f278a79046e639db71d6
-  ms.sourcegitcommit: 27c9bf1aae923527aa5adeaee073cb27d35c0ca1
+  ms.openlocfilehash: 9c5cdc98558deeff0ae92c86abfca1840c568233
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 12/05/2019
-  ms.locfileid: "74858391"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82673316"
