--- a/api/qsharp/Microsoft.Quantum.Logical.yml
+++ b/api/qsharp/Microsoft.Quantum.Logical.yml
@@ -1,7 +1,7 @@
 ### YamlMime:QSharpNamespace
 uid: microsoft.quantum.logical
 name: Microsoft.Quantum.Logical
-summary: " # <a name=\"summary\"></a>摘要\n 包含用于处理逻辑表达式和布尔逻辑的函数。"
+summary: " # <a name=\"summary\"></a>总结\n 包含用于处理逻辑表达式和布尔逻辑的函数。"
 functions:
 - uid: microsoft.quantum.logical.and
   summary: 返回两个值的布尔值。
@@ -70,9 +70,9 @@ functions:
 - uid: microsoft.quantum.logical.xor
   summary: 返回两个值的布尔互斥析取。
 metadata:
-  ms.openlocfilehash: 356a31be888d7ed3a96e219f8f7b31151179d3eb
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: ece9d3bcc41697efa07101844c0693edfc4bec89
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77905890"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82673206"
