--- a/api/qsharp/Microsoft.Quantum.MachineLearning.Datasets.yml
+++ b/api/qsharp/Microsoft.Quantum.MachineLearning.Datasets.yml
@@ -1,16 +1,16 @@
 ### YamlMime:QSharpNamespace
 uid: microsoft.quantum.machinelearning.datasets
 name: Microsoft.Quantum.MachineLearning.Datasets
-summary: " # <a name=\"summary\"></a>摘要\n 此命名空间提供了用于量程机器学习分类器的示例数据集。"
+summary: " # <a name=\"summary\"></a>总结\n 此命名空间提供了用于量程机器学习分类器的示例数据集。"
 operations:
 - uid: microsoft.quantum.machinelearning.datasets.iristrainingdata
   summary: ''
 - uid: microsoft.quantum.machinelearning.datasets.winedata
   summary: ''
 metadata:
-  ms.openlocfilehash: 6b6d6e8219beecaa2283b57b750b71626ed2678d
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: ba35052d20debe05e853afbc97844473a7de1ac7
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77908338"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82673194"
