--- a/api/qsharp/Microsoft.Quantum.Measurement.yml
+++ b/api/qsharp/Microsoft.Quantum.Measurement.yml
@@ -13,15 +13,15 @@ operations:
 - uid: microsoft.quantum.measurement.mresety
   summary: 按 Y 度量单个 qubit，并将其重置为标准基础状态 | 0 〉之后的度量。
 - uid: microsoft.quantum.measurement.mresetz
-  summary: 按 `Z` 度量单个 qubit，并将其重置为标准基础状态 | 0 〉之后的度量。
+  summary: '`Z`基于度量单个 qubit，并将其重置为标准基础状态 | 0 〉之后的度量。'
 - uid: microsoft.quantum.measurement.multim
   summary: 按标准度量给定数组中的每个 qubit。
 - uid: microsoft.quantum.measurement.settobasisstate
   summary: 通过测量 qubit 并在需要时应用位翻转，将 qubit 设置为给定的计算基础状态。
 metadata:
-  ms.openlocfilehash: dc74db43b60728bf9924c05346bae4c6b329a265
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: 8e0910bf53734ffe65aa12b06321ec9b3403133f
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77905754"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82673147"
