--- a/api/qsharp/Microsoft.Quantum.Oracles.yml
+++ b/api/qsharp/Microsoft.Quantum.Oracles.yml
@@ -1,18 +1,18 @@
 ### YamlMime:QSharpNamespace
 uid: microsoft.quantum.oracles
 name: Microsoft.Quantum.Oracles
-summary: " # <a name=\"summary\"></a>摘要\n 此命名空间提供了用户定义的类型，以通过其在量程估算和振幅放大等量程算法中的用途来装饰各种类型的 oracles。"
+summary: " # <a name=\"summary\"></a>总结\n 此命名空间提供了用户定义的类型，以通过其在量程估算和振幅放大等量程算法中的用途来装饰各种类型的 oracles。"
 functions:
 - uid: microsoft.quantum.oracles.deterministicstateoraclefromstateoracle
-  summary: 将 `StateOracle` 类型的 oracle 转换为 `DeterministicStateOracle`。
+  summary: 将类型`StateOracle`的 oracle 转换为`DeterministicStateOracle`。
 - uid: microsoft.quantum.oracles.obliviousoraclefromdeterministicstateoracle
-  summary: 将 oracles `DeterministicStateOracle` 和 `ObliviousOracle`组合在一起。
+  summary: 将 oracles `DeterministicStateOracle`和`ObliviousOracle`组合在一起。
 - uid: microsoft.quantum.oracles.oracletodiscrete
   summary: 给定一个表示 "黑盒" oracle 的操作，将返回一个独立的 oracle，它表示重复多次的 "黑箱" oracle。
 - uid: microsoft.quantum.oracles.reflectionoraclefromdeterministicstateoracle
   summary: 从 oracle 构造有关给定状态的反射。
 - uid: microsoft.quantum.oracles.stateoraclefromdeterministicstateoracle
-  summary: 将 `DeterministicStateOracle` 类型的 oracle 转换为 `StateOracle`。
+  summary: 将类型`DeterministicStateOracle`的 oracle 转换为`StateOracle`。
 newtypes:
 - uid: microsoft.quantum.oracles.continuousoracle
   summary: >-
@@ -28,7 +28,7 @@ newtypes:
     Oracle $O $ 的输入为：
 
 
-    - 将存储所需量程状态 $ \ket{\psi} 的寄存器\_s $。
+    - 将存储所需的量程状态 $ \ket{\psi}\_s $ 的寄存器。
 - uid: microsoft.quantum.oracles.discreteoracle
   summary: >-
     表示离散 oracle。
@@ -45,7 +45,7 @@ newtypes:
 
     - Ancilla 注册了 $O $ $a $ 的操作。
 
-    - 系统注册 $s $，需要应用所需的单一 $U $，并在 register $a $ $ 上的 $ \ket{t}\_$。
+    - 系统注册 $s $，将对其应用所需的单一 $U $，并在 register $a $ $ \ket{t}\_a $。
 - uid: microsoft.quantum.oracles.reflectionoracle
   summary: >-
     表示 oracle 反射。
@@ -69,9 +69,9 @@ newtypes:
 
     - 系统注册 $s $，将存储所需的量程状态 $ \ket{\psi}\_s $。
 metadata:
-  ms.openlocfilehash: 7e582286b69563bc4baa856f5236e5c2bd292ae0
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: c1f364d74aab6d318e7b6db078d5532aeae57bcd
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76869997"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82673105"
