--- a/api/qsharp/microsoft.quantum.math.extendedgreatestcommondivisorl.yml
+++ b/api/qsharp/microsoft.quantum.math.extendedgreatestcommondivisorl.yml
@@ -5,7 +5,7 @@ type: function
 namespace: Microsoft.Quantum.Math
 summary: 计算元组 $ （u，v） $，以便 $u \cdot a + v \cdot b = \operatorname{GCD} （a，b） $，其中 $ \operatorname{GCD} $ $a $ 最大公因数 $a $ 和 $b $。 GCD 始终为正值。
 syntax: 'function ExtendedGreatestCommonDivisorL (a : BigInt, b : BigInt) : (BigInt, BigInt)'
-references: '- 此实现根据 https://en.wikipedia.org/wiki/Extended_Euclidean_algorithm'
+references: '- 此实现取决于https://en.wikipedia.org/wiki/Extended_Euclidean_algorithm'
 input:
   content: '(a : BigInt, b : BigInt)'
   types:
@@ -27,9 +27,9 @@ output:
     - isPrimitive: true
       uid: BigInt
 metadata:
-  ms.openlocfilehash: 0e3c6138d5efe03603338341e37a9cf7bc07fb47
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: ade2f3451a273b69bcabaeae06ef7b234816291b
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233010"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82673838"
